Fixed overflow bug in facets on IE when html document has DOCTYPE declaration and is in standard mode. The tip is not to use position:relative on an element inside another element that is scrollable.

--- a/exhibit/branches/2.0/src/webapp/api/exhibit-bundle.css
+++ b/exhibit/branches/2.0/src/webapp/api/exhibit-bundle.css
@@ -266,8 +266,6 @@ div.exhibit-facet-body {
 
 div.exhibit-facet-value {
     cursor:         pointer;
-    position:       relative;
-    margin-left:    2em;
     padding:        2px 0px;
     clear:          both;
 }
@@ -276,15 +274,14 @@ div.exhibit-facet-value-selected {
 }
 
 div.exhibit-facet-value-count {
-    position:       absolute;
-    left:           -2em;
+    float:          left;
     width:          2em;
     text-align:     right;
     color:          #aaa;
 }
 
 div.exhibit-facet-value-inner {
-    padding-left:   0.25em;
+    padding-left:   2.5em;
 }
 
 div.exhibit-facet-value-checkbox {
